<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agilex_piper_utils</name>
  <version>1.0.0</version>
  <description>Utility nodes for Agilex Piper arm message conversion</description>
  <maintainer email="baoan.du.xj@renesas.com">Baoan Du</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>

  <!-- Transform dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>